# zkcreds-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build_wasm.sh  index.html
benches/: bench.rs  bench.rs.old  com_scaling.rs  empty.rs  empty.rs.disabled  linkage_microbench.rs  multishow.rs  multishow_age.rs  pseudonymous_show.rs  revealing_multishow.rs  simple_expiry.rs  tree_forest_tradeoff.rs  util.rs
benches/microbenches/: linkage_microbench.rs  mod.rs  monolithic_proof.rs  multishow.rs  multishow_age.rs  pseudonymous_show.rs  revealing_multishow.rs  simple_expiry.rs  tf_proof.rs  tree_forest_tradeoff.rs
benches/passport/: issuance_checker.rs  mod.rs  params.rs  passport_dump.rs  passport_info.rs  preds.rs  sig_verif.rs
demo/: issuer.html  observer.html  testFile.txt  testFileReader.html  user.html  zeronym_bg.wasm
demo/index/: index.html  zeronym.js
examples/: hello_ffi.py  web-demo.py
examples/passport/: ark_sha256.rs  issuance_checker.rs  main.rs  params.rs  passport_dump.rs  passport_info.rs  preds.rs  sig_verif.rs
examples/static/: index.html  issue-grant-info.html  issue-req.html
guiding_docs/: framework_api.txt
guiding_docs/api_usage_example/: main.rs  passport_info.rs  predicates.rs
scripts/: app.py  hello_world.py
scripts/static/: index.html  issue-grant-fail.html  issue-grant-succ.html  issue-req.html
src/: 2  api.rs  attrs.rs  birth.rs  com_forest.rs  com_tree.rs  common.rs  constraints.rs  identity_crh.rs  lib.rs  link.rs  membership_circuit.rs  merkle_forest.rs  monolithic_proof.rs  multishow.rs  poseidon_utils.rs  pred.rs  proof_data_structures.rs  proof_of_issuance.rs  pseudonymous_show.rs  python_exports.rs  revealing_multishow.rs  show_cred.rs  sig.rs  sparse_merkle.rs  test_util.rs  tf_membership.rs  utils.rs  wasm_api.rs  zk_utils.rs
src/compressed_pedersen/: constraints.rs  mod.rs
src/merkle_forest/: constraints.rs  mod.rs
src/sparse_merkle/: constraints.rs  mod.rs
