[package]
name = "merkle_bench"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-ec = "0.3"
ark-groth16 = "0.3"
#ark-groth16 = { git = "https://github.com/rozbb/groth16.git", branch = "verif-preprocess" }
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-relations = "0.3"
ark-r1cs-std = "0.3"
ark-std = "0.3"

[dependencies.ark-crypto-primitives]
git = "https://github.com/arkworks-rs/crypto-primitives.git"
branch = "main"
features = ["r1cs"]
#path = "../crypto-primitives"
#branch = "merkle-changes"
#version = "0.3"

[features]
default = ["asm", "parallel"]
asm = ["ark-ff/asm"]
parallel = [
    "ark-crypto-primitives/parallel",
    "ark-groth16/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-r1cs-std/parallel"
]

[dev-dependencies]
ark-bls12-381 = { version = "0.3" }
criterion = { version = "0.3", features = [ "html_reports" ] }

[profile.release]
debug = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
