[package]
name = "zeronym"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
ark-bls12-381 = "0.3"
ark-crypto-primitives = { version = "0.3", features = ["r1cs"], default-features = false }
ark-ec = "0.3"
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-ff = "0.3"
ark-groth16 = { version = "0.3", default-features = false }
ark-relations = "0.3"
ark-r1cs-std = "0.3"
ark-std = "0.3"
ark-serialize = "0.3"
arkworks-gadgets = "0.3"
base64 = "0.13"
byteorder = "1.4"
lazy_static = "1.4"
rand = "0.8"
rand_core = "0.6"

[dependencies.groth-sahai-wrappers]
git = "https://github.com/jdwhite88/groth-sahai-wrappers"
rev = "84d30dcd8c5f073a6b4c80f3baccd7556aeccb0a"

[patch.crates-io.ark-crypto-primitives]
git = "https://github.com/arkworks-rs/crypto-primitives.git"
rev = "3402a729b7104983c9779714ab8580de5187bbdd"

[features]
default = ["std", "parallel", "asm"]
asm = ["ark-ff/asm"]
parallel = [
    "ark-crypto-primitives/parallel",
    "ark-groth16/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-r1cs-std/parallel"
]
std = [
    "ark-crypto-primitives/std",
    "ark-groth16/std",
    "ark-std/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-r1cs-std/std",
    "rand_core/std"
]

[dev-dependencies]
ark-bls12-381 = { version = "0.3" }
base64 = "0.13"
criterion = { version = "0.3", features = [ "html_reports" ] }
#openssl = "0.10"
rsa = { version = "0.5", features = [ "alloc" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
x509-parser = "0.13"

[profile.release]
debug = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
