[package]
name = "zkcreds"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
ark-bls12-381 = "0.3"
ark-crypto-primitives = { version = "0.3", features = ["r1cs"], default-features = false }
ark-ec = "0.3"
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-ff = "0.3"
ark-relations = "0.3"
ark-r1cs-std = "0.3"
ark-std = "0.3"
ark-serialize = "0.3"
arkworks-native-gadgets = "0.5"
arkworks-r1cs-gadgets = "0.5"
arkworks-utils = { version = "0.5" }
base64 = "0.13"
byteorder = "1.4"
derivative = { version = "2.0", features = ["use_core"] }
lazy_static = "1.4"
rand = "0.8"
rand_core = "0.6"

[dependencies.linkg16]
git = "ssh://git@github.com/rozbb/linkg16"
rev = "12be919bd9e942a1bbe4cb15002356e6f30e502b"

[patch.crates-io.ark-crypto-primitives]
git = "https://github.com/arkworks-rs/crypto-primitives.git"
rev = "3402a729b7104983c9779714ab8580de5187bbdd"

[features]
default = ["std", "parallel", "asm"]
asm = ["ark-ff/asm"]
parallel = [
    "ark-crypto-primitives/parallel",
    "linkg16/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-r1cs-std/parallel"
]
std = [
    "ark-crypto-primitives/std",
    "linkg16/std",
    "ark-std/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-r1cs-std/std",
    "rand_core/std"
]

[dev-dependencies]
ark-bls12-381 = { version = "0.3" }
arkworks-utils = { version = "0.5", features = [ "poseidon_bls381_x3_5" ] }
base64 = "0.13"
criterion = { version = "0.3", features = [ "html_reports" ] }
rsa = { version = "0.5", features = [ "alloc" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
x509-parser = "0.13"
rayon = "1.5"

[profile.release]
debug = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
